fix(button-group): let white space break for button-group

--- a/packages/web-styles/src/components/button-group.scss
+++ b/packages/web-styles/src/components/button-group.scss
@@ -5,6 +5,7 @@
 .btn-group {
   display: inline-flex;
   gap: 0.125rem;
+  max-width: 100%;
 
   .btn-primary {
     // Reset primary button for backwards compatibility
@@ -16,6 +17,7 @@
     outline-offset: 0.25rem;
     background-color: var(--background-color);
     box-shadow: 0 0 0 0.125rem color.$gray-20;
+    white-space: normal;
     cursor: pointer;
 
     @include utilities.not-disabled-focus-hover() {
